Text overflow in p teaser - fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1817,9 +1817,6 @@ aside {
   }
   .fosterling:hover {
     border-left: 4px solid #10b0ca;
-    background-color: rgba(18, 126, 155, 0.2);
-    -webkit-box-shadow: 0 8px 8px rgba(18, 126, 155, 0.4);
-    box-shadow: 0 8px 8px rgba(18, 126, 155, 0.4);
   }
 }
 
@@ -1862,17 +1859,18 @@ aside {
   padding: 0;
 }
 
+.fosterling .fosterling-teaser .fosterling-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
 @media screen and (min-width: 589px) {
   .fosterling .fosterling-teaser .fosterling-img {
     position: relative;
     width: 220px;
     height: 220px;
-  }
-  .fosterling .fosterling-teaser .fosterling-img img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
   }
 }
 
@@ -1994,7 +1992,21 @@ aside {
 
 @media screen and (min-width: 589px) {
   .fosterling .fosterling-teaser .fosterling-info .fosterling-story {
+    position: relative;
     height: calc(220px - 68px - 8px - 48px);
+    overflow: hidden;
+  }
+  .fosterling .fosterling-teaser .fosterling-info .fosterling-story:after {
+    content: '';
+    width: 100%;
+    position: absolute;
+    height: 24px;
+    bottom: 0;
+    left: 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(222, 222, 222, 0)), to(#dedede));
+    background: -webkit-linear-gradient(top, rgba(222, 222, 222, 0), #dedede);
+    background: -o-linear-gradient(top, rgba(222, 222, 222, 0), #dedede);
+    background: linear-gradient(to bottom, rgba(222, 222, 222, 0), #dedede);
   }
 }
 
