--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -204,8 +204,8 @@ aside {
 		box-shadow: 0 $basic / 2 $basic / 2 rgba(0,0,0,.1);
 		&:hover {
 			border-left: $basic / 4 solid $color-main;
-			background-color: rgba(18,126,155,.2);
-			box-shadow: 0 $basic / 2 $basic / 2 rgba(18,126,155,.4);
+			// background-color: rgba(18,126,155,.2);
+			// box-shadow: 0 $basic / 2 $basic / 2 rgba(18,126,155,.4);
 		}
 	}
 	@media screen and (min-width: 1600px) {
@@ -235,15 +235,15 @@ aside {
 			line-height: 0;
 			margin: 0;
 			padding: 0;
+			& img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
 			@media screen and (min-width: 589px) {
 				position: relative;
 				width: 220px;
 				height: 220px;
-				& img {
-					width: 100%;
-					height: 100%;
-					object-fit: cover;
-				}
 			}
 			@media screen and (min-width: 769px) {
 				width: 256px;
@@ -326,7 +326,18 @@ aside {
 				margin: 0 $basic;
 				color: $color-neutral;
 				@media screen and (min-width: 589px) {
+					position: relative;
 					height: calc(220px - 68px - 8px - 48px);
+					overflow: hidden;
+					&:after {
+						content: '';
+						width: 100%;
+						position: absolute;
+						height: $basic * 1.5;
+						bottom: 0;
+						left: 0;
+						background: linear-gradient(to bottom, rgba(222,222,222,0), rgba(222,222,222,1));
+					}
 				}
 				@media screen and (min-width: 769px) {
 					height: calc(256px - 68px - 8px - 48px);
